--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 "body_class":"main"
 })
 <main>
-
+    @@include('html/banner.html',{})
+    @@include('html/section.html',{})
 </main>
 @@include('html/footer.html',{"footer_class":""})
