--- a/src/html/banner.html
+++ b/src/html/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
     <div class="banner__text">
-        Политика не может не реагировать на детский заливистый смех
+        Логика может привести Вас от пункта А к пункту Б, а воображение — куда угодно.
     </div>
 </div>
